--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="about">
-    <h2>About test page</h2>
+    <h2>About page</h2>
     <h3>Section header</h3>
     <p>Now is the time for all good...</p>
 </div>
