--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,10 @@
 {% block content %}
 <div class="home">
     <h2>Main page</h2>
-    <p>Some paragraph test...blah, blah, blah...</p>
+    <p>Some paragraph text.</p>
+    <p>blah, blah, blah</p>
+
+    <h3>And the obligatory xkcd image...</h3>
+    <img src="https://imgs.xkcd.com/comics/installing.png">
 </div>
 {% endblock %}
